--- a/01-PetShop/package.json
+++ b/01-PetShop/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "nodeb7web",
+  "name": "nodejs-b7web-petshop",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e ts,json,mustache src/server.ts"
+    "dev": "tsx --watch src/server.ts"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "mustache-express": "^1.3.2",
-    "typescript": "^5.4.5",
-    "validator": "^13.11.0"
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/mustache-express": "^1.2.5",
-    "@types/node": "^20.12.7",
-    "@types/validator": "^13.11.9"
+    "@types/node": "^20.12.10"
   }
 }
