--- a/03-Prisma/package.json
+++ b/03-Prisma/package.json
@@ -10,11 +10,13 @@
     "@prisma/client": "^6.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "helmet": "^8.0.0"
+    "helmet": "^8.0.0",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
+    "@types/prompt-sync": "^4.2.3",
     "prisma": "^6.0.1",
     "tsx": "^4.19.2"
   }
