--- a/04-AuthAndEmail/package.json
+++ b/04-AuthAndEmail/package.json
@@ -12,8 +12,10 @@
     "helmet": "^8.0.0"
   },
   "devDependencies": {
+    "@prisma/client": "^6.0.1",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
+    "prisma": "^6.0.1",
     "tsx": "^4.19.2"
   }
 }
