--- a/04-AuthAndEmail/package.json
+++ b/04-AuthAndEmail/package.json
@@ -10,13 +10,15 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "@prisma/client": "^6.0.1",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
+    "@types/passport": "^1.0.17",
     "prisma": "^6.0.1",
     "tsx": "^4.19.2"
   }
