--- a/05-TDD/.env
+++ b/05-TDD/.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mysql://root:1234@localhost:3306/TDD_db?schema=public"
+URL_DATABASE='mysql://root:1234@localhost:3306/TDD_db?schema=public'
 PORT=3000
