--- a/05-TDD/package.json
+++ b/05-TDD/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "tsx src/app.ts --watch",
-    "test": "jest"
+    "test": "npx jest --runInBand"
   },
   "dependencies": {
+    "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "typescript": "^5.7.3"
